--- a/css/sample.css
+++ b/css/sample.css
@@ -85,13 +85,18 @@ body .sample02-container main.sample02-main .sample-text .sample-content {
 }
 
 body .sample03-container nav.nav-03 {
-  height: 110px;
   background-image: linear-gradient(130deg, #FFFFFF 30%, #192D79 30%);
 }
 
-@media (max-width: 1299px) {
+@media (max-width: 1199px) {
   body .sample03-container nav.nav-03 {
-    height: 90px;
+    background-image: linear-gradient(130deg, #FFFFFF 35%, #192D79 35%);
+  }
+}
+
+@media (max-width: 991px) {
+  body .sample03-container nav.nav-03 {
+    background-image: linear-gradient(130deg, #FFFFFF 80%, #192D79 80%);
   }
 }
 
@@ -122,8 +127,15 @@ body .sample03-container main.sample03-main .sample-text {
 
 @media (max-width: 991px) {
   body .sample03-container main.sample03-main .sample-text {
-    top: 400px;
+    top: 35%;
     left: calc(50% - 300px);
+  }
+}
+
+@media (max-width: 659px) {
+  body .sample03-container main.sample03-main .sample-text {
+    top: 25%;
+    left: calc(50% - 250px);
   }
 }
 
@@ -141,6 +153,16 @@ body .sample03-container main.sample03-main .sample-text button {
   transition: 0.5s ease-in-out;
 }
 
+@media (max-width: 991px) {
+  body .sample03-container main.sample03-main .sample-text button {
+    padding-top: 0px;
+    margin-top: 10px;
+    width: 150px;
+    height: 35px;
+    font-size: 20px;
+  }
+}
+
 body .sample03-container main.sample03-main .sample-text button:hover {
   background-color: #192D79;
   color: #FCFF9F;
@@ -149,6 +171,12 @@ body .sample03-container main.sample03-main .sample-text button:hover {
 body .sample03-container main.sample03-main .sample-text button img {
   width: 40px;
   margin-right: 5px;
+}
+
+@media (max-width: 991px) {
+  body .sample03-container main.sample03-main .sample-text button img {
+    width: 30px;
+  }
 }
 
 body .sample03-container main.sample03-main .sample-text button .more-img-hover {
@@ -199,6 +227,22 @@ body .sample03-container main.sample03-main .sample-text .sample-content {
   }
 }
 
+@media (max-width: 659px) {
+  body .sample03-container main.sample03-main .sample-text .sample03-notshow {
+    display: none;
+  }
+}
+
+body .sample03-container main.sample03-main .sample-text .sample03-show {
+  display: none;
+}
+
+@media (max-width: 659px) {
+  body .sample03-container main.sample03-main .sample-text .sample03-show {
+    display: block;
+  }
+}
+
 body .sample03-container main.sample03-main #particles-js {
   position: absolute;
   width: 100%;
@@ -215,22 +259,27 @@ body .sample03-container main.sample03-main #fade1 {
   position: absolute;
   font-size: 70px;
   text-shadow: rgba(0, 0, 0, 0.5) 5px 5px 5px;
-  top: 250px;
-  left: calc(50% - 200px);
+  top: 0px;
+  left: calc(50% - 220px);
   color: #FFFFFF;
 }
 
 @media (max-width: 991px) {
   body .sample03-container main.sample03-main #fade1 {
     font-size: 50px;
-    top: 400px;
-    left: calc(50% - 150px);
+    left: calc(50% - 160px);
+  }
+}
+
+@media (max-width: 659px) {
+  body .sample03-container main.sample03-main #fade1 {
+    top: 70px;
+    left: calc(50% - 120px);
   }
 }
 
 body .sample04-container nav.nav-04 {
   width: 100%;
-  height: 110px;
   position: absolute;
   z-index: 1;
 }
@@ -252,7 +301,7 @@ body .sample04-container main.sample04-main {
 
 body .sample04-container main.sample04-main .sample-text {
   position: absolute;
-  top: 250px;
+  top: 30%;
   left: 200px;
   letter-spacing: 5px;
 }
@@ -260,6 +309,13 @@ body .sample04-container main.sample04-main .sample-text {
 @media (max-width: 1299px) {
   body .sample04-container main.sample04-main .sample-text {
     left: 100px;
+  }
+}
+
+@media (max-width: 991px) {
+  body .sample04-container main.sample04-main .sample-text {
+    text-align: center;
+    left: calc(50% - 170px);
   }
 }
 
@@ -277,6 +333,22 @@ body .sample04-container main.sample04-main .sample-text button {
   transition: 0.5s ease-in-out;
 }
 
+@media (max-width: 1299px) {
+  body .sample04-container main.sample04-main .sample-text button {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 991px) {
+  body .sample04-container main.sample04-main .sample-text button {
+    padding-top: 0px;
+    margin-top: 10px;
+    width: 150px;
+    height: 35px;
+    font-size: 20px;
+  }
+}
+
 body .sample04-container main.sample04-main .sample-text button:hover {
   background-color: #192D79;
   color: #FCFF9F;
@@ -285,6 +357,12 @@ body .sample04-container main.sample04-main .sample-text button:hover {
 body .sample04-container main.sample04-main .sample-text button img {
   width: 40px;
   margin-right: 5px;
+}
+
+@media (max-width: 991px) {
+  body .sample04-container main.sample04-main .sample-text button img {
+    width: 30px;
+  }
 }
 
 body .sample04-container main.sample04-main .sample-text button .more-img-hover {
@@ -311,8 +389,13 @@ body .sample04-container main.sample04-main .sample-text .sample-title {
   font-size: 76px;
   color: #FFFFFF;
   text-shadow: rgba(0, 0, 0, 0.5) 5px 5px 5px;
-  line-height: 96px;
   margin-bottom: 10px;
+}
+
+@media (max-width: 1299px) {
+  body .sample04-container main.sample04-main .sample-text .sample-title {
+    font-size: 60px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -325,7 +408,12 @@ body .sample04-container main.sample04-main .sample-text .sample-content {
   font-size: 55px;
   color: #FCEE21;
   text-shadow: rgba(0, 0, 0, 0.5) 2px 2px 5px;
-  line-height: 80px;
+}
+
+@media (max-width: 1299px) {
+  body .sample04-container main.sample04-main .sample-text .sample-content {
+    font-size: 40px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -338,15 +426,22 @@ body .sample04-container main.sample04-main #fade2 {
   position: absolute;
   font-size: 76px;
   text-shadow: rgba(0, 0, 0, 0.5) 5px 5px 5px;
-  top: 243px;
-  left: 390px;
+  top: 0px;
+  left: 180px;
   color: #F9EB21;
+}
+
+@media (max-width: 1299px) {
+  body .sample04-container main.sample04-main #fade2 {
+    left: 140px;
+    font-size: 60px;
+  }
 }
 
 @media (max-width: 991px) {
   body .sample04-container main.sample04-main #fade2 {
     font-size: 50px;
-    left: calc(50% - 150px);
+    left: 135px;
   }
 }
 
@@ -372,13 +467,19 @@ body nav.sample-nav .container-fluid .navbar-brand {
   }
 }
 
+@media (max-width: 767px) {
+  body nav.sample-nav .container-fluid .navbar-brand {
+    margin-left: 5px;
+  }
+}
+
 body nav.sample-nav .container-fluid .navbar-brand img {
   width: 380px;
 }
 
 @media (max-width: 1679px) {
   body nav.sample-nav .container-fluid .navbar-brand img {
-    width: 350px;
+    width: 100%;
   }
 }
 
@@ -391,6 +492,18 @@ body nav.sample-nav .container-fluid .navbar-brand img {
 @media (max-width: 1299px) {
   body nav.sample-nav .container-fluid .navbar-brand img {
     width: 250px;
+  }
+}
+
+@media (max-width: 991px) {
+  body nav.sample-nav .container-fluid .navbar-brand img {
+    width: 200px;
+  }
+}
+
+@media (max-width: 767px) {
+  body nav.sample-nav .container-fluid .navbar-brand img {
+    width: 150px;
   }
 }
 
@@ -445,6 +558,10 @@ body nav.sample-nav .container-fluid ul .nav-link .nav-link.active {
   color: #F9EB21;
 }
 
+body main button {
+  border: none;
+}
+
 body .sample-title {
   color: #FCEE21;
   font-size: 78px;
@@ -453,9 +570,5 @@ body .sample-title {
 body .sample-content {
   color: #FFFFFF;
   font-size: 54px;
-}
-
-button {
-  border: none;
 }
 /*# sourceMappingURL=sample.css.map */
